NEXT-26092 - fix missing scrollbar for rule assigement

--- a/src/Administration/Resources/app/administration/src/module/sw-settings-rule/component/sw-settings-rule-add-assignment-modal/sw-settings-rule-assignment-modal.scss
+++ b/src/Administration/Resources/app/administration/src/module/sw-settings-rule/component/sw-settings-rule-add-assignment-modal/sw-settings-rule-assignment-modal.scss
@@ -1,6 +1,6 @@
 .sw-modal.sw-settings-rule-add-assignment-modal {
     .sw-modal__body {
         padding: 0;
-        overflow-y: hidden;
+        overflow-y: auto;
     }
 }
